--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
 
 <div *ngIf="fireService.auth.currentUser">
 <h1>Hello {{fireService.auth.currentUser.email}}
+  <img (click)="fileinput.click()" style="max-height: 60px;" [src]="fireService.currentlySignedInUserAvatarUrl">
+  <input (change)="fireService.updateUserImage($event)" hidden #fileinput type="file">
   <button (click)="fireService.signOut()">Sign out</button>
 </h1>
 <p>Input for message</p>
@@ -21,13 +23,10 @@
 <button (click)="fireService.sendMessage(sendThisMessage,IdOfThisMessage)">send message</button>
 <p>Find by ID</p>
 <input [(ngModel)]="findThisId">
-<button (click)="getSpecificMessage(findThisId)">Get the doc</button>
+<button (click)="fireService.findUserid(findThisId)">Get the doc</button>
 
 <br>
 <div>
-<p *ngIf="specificMessage !== undefined">
-  {{specificMessage | json}}
-</p>
   <button (click)="changeToEdit()">Edit</button>
   <button (click)="cancel()">Cancel</button>
 <p *ngIf="editing">
@@ -38,9 +37,9 @@
 
 
 <div></div>
-<p *ngFor="let m of fireService.messages">
-  {{m | json}}
-</p>
+  <p *ngFor="let m of fireService.messages">
+    {{m | json}}
+  </p>
 </div>
 
 
